<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/add_photo"
          android:icon="@drawable/ic_add_photo"
          android:title="@string/add_photo"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/add_offering"
          android:icon="@drawable/ic_ystar"
          android:title="@string/new_offer"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/edit_location_name"
          android:icon="@drawable/ic_edit"
          android:title="@string/edit_name"
          android:showAsAction="never|withText" />
    
    <item android:id="@+id/edit_location_description"
          android:icon="@drawable/ic_edit"
          android:title="@string/edit_description"
          android:showAsAction="never|withText" />
    
    <item android:id="@+id/edit_location_position"
          android:icon="@drawable/ic_edit_map"
          android:title="@string/edit_position"
          android:showAsAction="never|withText" />

</menu>
