<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    
    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true">
	    
        <LinearLayout
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		    <EditText
		        android:id="@+id/etOfferingName"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:inputType="textCapSentences"
		        android:hint="@string/name"
		        android:layout_marginBottom="10dp" />
		    
		    <EditText
		        android:id="@+id/etOfferingDesc"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:inputType="textMultiLine"
		        android:maxLength="120"
		        android:hint="@string/desc"
		        android:layout_marginBottom="10dp" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:text="@string/expiring_date"
		        android:layout_marginBottom="4dp"
		        android:layout_gravity="center" />
		    
		    <DatePicker
		        android:id="@+id/dpOfferingExpDate"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="16dp" />
		
		</LinearLayout>
        
    </ScrollView>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:baselineAligned="false"
	    android:layout_alignParentBottom="true"
	    android:padding="5dp"
	    style="?android:attr/buttonBarStyle" >
	    
	    <FrameLayout
	        android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1" >
	        
	        <Button
	            android:paddingLeft="16dp"
	            android:paddingRight="16dp"
	            android:layout_gravity="center"
		        style="?android:attr/buttonBarButtonStyle"
		        android:id="@+id/btnCancel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cancel" />
	        
	    </FrameLayout>
	    
	    <FrameLayout
	        android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1" >
	        
	        <Button
	            android:paddingLeft="16dp"
            	android:paddingRight="16dp"
	            android:layout_gravity="center"
		        style="?android:attr/buttonBarButtonStyle"
		        android:id="@+id/btnCreate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/create" />
	        
	    </FrameLayout>
	</LinearLayout>
</RelativeLayout>
